hphp/hack/test/typecheck/constraint_array_index/after/lambda_access_two_types_bad.php
<?hh
function f(): void {
  $f = ($v ==> $v[0] + $v["a"]);
  $f(vec[0]);
}
